IaC/xpipe-dev/xpipe-ecommerce/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: xpipe-ecommerce-db
  name: xpipe-ecommerce-db
  namespace: xpipe-dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: xpipe-ecommerce-db
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xpipe-ecommerce-db
    spec:
      containers:
      - env:
        - name: MYSQL_MAX_CONNECTIONS
          valueFrom:
            configMapKeyRef:
              key: MYSQL_MAX_CONNECTIONS
              name: xpipe-ecommerce-db-config
        - name: MYSQL_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: MYSQL_ROOT_PASSWORD
              name: xpipe-ecommerce-db-secret
        - name: MYSQL_DATABASE
          valueFrom:
            secretKeyRef:
              key: MYSQL_DATABASE
              name: xpipe-ecommerce-db-secret
        - name: MYSQL_USER
          valueFrom:
            secretKeyRef:
              key: MYSQL_USER
              name: xpipe-ecommerce-db-secret
        - name: MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: MYSQL_PASSWORD
              name: xpipe-ecommerce-db-secret
        #image: mysql:8.0.37
        image: mysql:8.3.0
        imagePullPolicy: IfNotPresent
        #command: [ "tail" ]
        #args: [ "-f", "/dev/null" ]
#        livenessProbe:
#          exec:
#            command:
#            - /bin/sh
#            - -i
#            - -c
#            -  mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}
#          failureThreshold: 3
#          initialDelaySeconds: 30
#          periodSeconds: 10
#          successThreshold: 1
#          timeoutSeconds: 1
        name: xpipe-ecommerce-db
        ports:
        - containerPort: 3306
          protocol: TCP
#        readinessProbe:
#          exec:
#            command:
#            - /bin/sh
#            - -ec
#            - set -ex
#            - mysql -u root -p${MYSQL_ROOT_PASSWORD} -e 'SELECT 1'
#          failureThreshold: 3
#          initialDelaySeconds: 5
#          periodSeconds: 10
#          successThreshold: 1
#          timeoutSeconds: 1
        resources:
          limits:
            memory: 1024Mi
          requests:
            memory: 1024Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: xpipe-ecommerce-db-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: xpipe-ecommerce-db-volume
        persistentVolumeClaim:
          claimName: xpipe-ecommerce-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: xpipe-ecommerce-db
  name: xpipe-ecommerce-db
  namespace: xpipe-dev
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: xpipe-ecommerce-db
  sessionAffinity: None
  type: ClusterIP
