IaC/xpipe-dev/xpipe-ecommerce/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: xpipe-ecommerce
  name: xpipe-ecommerce
  namespace: xpipe-dev
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  - name: ssh
    port: 2222
    protocol: TCP
    targetPort: 2222
  selector:
    app: xpipe-ecommerce
  sessionAffinity: None
  type: ClusterIP
